# edgellm

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  conanfile.py
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt
include/edgellm/: edgellm.hpp  ropeEmbedding.hpp  sampler.hpp  tokenizer.hpp
scripts/: run_with_adb.sh
source/: edgellm.cpp  sampler.cpp  tokenizer.cpp
test/: CMakeLists.txt
test/source/: edgellm_test.cpp  tokenizer_test.cpp
